<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="insurance.edu.hust.ccstudio.insurance.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="30sp"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@android:drawable/edit_text"
        android:hint="@string/user_name"/>

    <EditText
        android:id="@+id/password"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:background="@android:drawable/edit_text"
        android:hint="@string/user_password"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"/>

   <RelativeLayout
       android:layout_width="match_parent"
       android:orientation="horizontal"
       android:layout_height="wrap_content">
       <Button
           android:id="@+id/reset"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:gravity="left"
           android:background="@android:color/transparent"
           android:layout_marginLeft="30dp"
           android:text="@string/forget_password"
           />
       <Button
           android:id="@+id/register"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:gravity="right"
           android:background="@android:color/transparent"
           android:text="@string/register"

           android:layout_alignParentTop="true"
           android:layout_alignParentRight="true"
           android:layout_alignParentEnd="true"
           android:layout_marginRight="37dp"
           android:layout_marginEnd="37dp" />
   </RelativeLayout>
</LinearLayout>
